--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,21 @@
 /db
 /deps
 /*.ez
-
-# Generated on crash by the VM
+.elixir
 erl_crash.dump
-
-# Generated on crash by NPM
 npm-debug.log
-
-# Static artifacts
 /assets/node_modules
-
-# Since we are building assets from assets/,
-# we ignore priv/static. You may want to comment
-# this depending on your deployment strategy.
 /priv/static/
-
-# Files matching config/*.secret.exs pattern contain sensitive
-# data and you should not commit them into version control.
-#
-# Alternatively, you may comment the line below and commit the
-# secrets files as long as you replace their contents by environment
-# variables.
 /config/*.secret.exs
+/_build
+/deps
+/doc
+/tmp
+/node_modules
+/assets/node_modules
+/installer/_build
+/installer/tmp
+/installer/doc
+/installer/deps
+erl_crash.dump
+.elixir_ls/
