--- a/assets/package.json
+++ b/assets/package.json
@@ -6,13 +6,18 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
     "brunch": "^2.10.17",
     "clean-css-brunch": "2.10.0",
+    "file-loader": "^4.2.0",
     "uglify-js-brunch": "2.10.0"
   }
 }
